--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,6 @@ services:
     build:
       context: ./src
     ports:
-      - "5000:5000"
+      - "80:5000"
     volumes:
-      - type: bind
-        source: ./src/web
-        target: /usr/src/app
+      - ./src/data
