--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,51 +1,65 @@
-FROM ghcr.io/linuxserver/baseimage-alpine:3.16
+FROM ghcr.io/linuxserver/baseimage-alpine-nginx:3.15
 
-# install packages
+# set version label
+ARG BUILD_DATE
+ARG VERSION
+ARG GROCY_RELEASE
+LABEL build_version="Linuxserver.io version:- ${VERSION} Build-date:- ${BUILD_DATE}"
+LABEL maintainer="alex-phillips, homerr"
+
 RUN \
   echo "**** install build packages ****" && \
-  apk add --no-cache \
-    apache2-utils \
+  apk add --no-cache --virtual=build-dependencies \
+    composer \
     git \
-    logrotate \
-    nano \
-    nginx \
-    openssl \
-    php8 \
-    php8-fileinfo \
-    php8-fpm \
+    yarn && \
+  echo "**** install runtime packages ****" && \
+  apk add --no-cache \
+    curl \
+    php8-ctype \
+    php8-curl \
+    php8-gd \
+    php8-iconv \
+    php8-intl \
     php8-json \
-    php8-mbstring \
-    php8-openssl \
-    php8-session \
-    php8-simplexml \
-    php8-xml \
-    php8-xmlwriter \
-    php8-zlib && \
-  echo "**** configure nginx ****" && \
-  echo 'fastcgi_param  HTTP_PROXY         ""; # https://httpoxy.org/' >> \
-    /etc/nginx/fastcgi_params && \
-  echo 'fastcgi_param  PATH_INFO          $fastcgi_path_info; # http://nginx.org/en/docs/http/ngx_http_fastcgi_module.html#fastcgi_split_path_info' >> \
-    /etc/nginx/fastcgi_params && \
-  echo 'fastcgi_param  SCRIPT_FILENAME    $document_root$fastcgi_script_name; # https://www.nginx.com/resources/wiki/start/topics/examples/phpfcgi/#connecting-nginx-to-php-fpm' >> \
-    /etc/nginx/fastcgi_params && \
-  echo 'fastcgi_param  SERVER_NAME        $host; # Send HTTP_HOST as SERVER_NAME. If HTTP_HOST is blank, send the value of server_name from nginx (default is `_`)' >> \
-    /etc/nginx/fastcgi_params && \
-  rm -f /etc/nginx/http.d/default.conf && \
-  echo "**** configure php ****" && \
-  sed -i "s#;error_log = log/php8/error.log.*#error_log = /config/log/php/error.log#g" \
-    /etc/php8/php-fpm.conf && \
-  sed -i "s#user = nobody.*#user = abc#g" \
-    /etc/php8/php-fpm.d/www.conf && \
-  sed -i "s#group = nobody.*#group = abc#g" \
-    /etc/php8/php-fpm.d/www.conf && \
-  echo "**** fix logrotate ****" && \
-  sed -i "s#/var/log/messages {}.*# #g" \
-    /etc/logrotate.conf && \
-  sed -i 's#/usr/sbin/logrotate /etc/logrotate.conf#/usr/sbin/logrotate /etc/logrotate.conf -s /config/log/logrotate.status#g' \
-    /etc/periodic/daily/logrotate
+    php8-ldap \
+    php8-pdo \
+    php8-pdo_sqlite \
+    php8-phar \
+    php8-tokenizer \
+    php8-zip && \
+  echo "**** install grocy ****" && \
+  mkdir -p /app/www && \
+  if [ -z ${GROCY_RELEASE+x} ]; then \
+    GROCY_RELEASE=$(curl -sX GET "https://api.github.com/repos/grocy/grocy/releases/latest" \
+    | awk '/tag_name/{print $4;exit}' FS='[""]'); \
+  fi && \
+  curl -o \
+    /tmp/grocy.tar.gz -L \
+    "https://github.com/grocy/grocy/archive/${GROCY_RELEASE}.tar.gz" && \
+  tar xf \
+    /tmp/grocy.tar.gz -C \
+    /app/www/ --strip-components=1 && \
+  cp -R /app/www/data/plugins \
+    /defaults/plugins && \
+  echo "**** install composer packages ****" && \
+  composer install -d /app/www --no-dev && \
+  echo "**** install yarn packages ****" && \
+  cd /app/www && \
+  yarn --production && \
+  yarn cache clean && \
+  mv /app/www/public/node_modules /defaults/node_modules && \
+  echo "**** cleanup ****" && \
+  apk del --purge \
+    build-dependencies && \
+  rm -rf \
+    /root/.composer \
+    /root/.cache \
+    /tmp/*
 
-# add local files
+# copy local files
 COPY root/ /
 
 # ports and volumes
 EXPOSE 80 443
+VOLUME /config
